src/test/ui/consts/const-eval/const-eval-overflow2c.stderr
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:14:6
   |
LL | const VALS_I8: (i8,) =
   | --------------------
LL |     (
LL |      i8::MIN * 2,
   |      ^^^^^^^^^^^ attempt to compute `i8::MIN * 2_i8`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:21:6
   |
LL | const VALS_I16: (i16,) =
   | ----------------------
LL |     (
LL |      i16::MIN * 2,
   |      ^^^^^^^^^^^^ attempt to compute `i16::MIN * 2_i16`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:28:6
   |
LL | const VALS_I32: (i32,) =
   | ----------------------
LL |     (
LL |      i32::MIN * 2,
   |      ^^^^^^^^^^^^ attempt to compute `i32::MIN * 2_i32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:35:6
   |
LL | const VALS_I64: (i64,) =
   | ----------------------
LL |     (
LL |      i64::MIN * 2,
   |      ^^^^^^^^^^^^ attempt to compute `i64::MIN * 2_i64`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:42:6
   |
LL | const VALS_U8: (u8,) =
   | --------------------
LL |     (
LL |      u8::MAX * 2,
   |      ^^^^^^^^^^^ attempt to compute `u8::MAX * 2_u8`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:48:6
   |
LL | const VALS_U16: (u16,) = (
   | ----------------------
LL |      u16::MAX * 2,
   |      ^^^^^^^^^^^^ attempt to compute `u16::MAX * 2_u16`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:54:6
   |
LL | const VALS_U32: (u32,) = (
   | ----------------------
LL |      u32::MAX * 2,
   |      ^^^^^^^^^^^^ attempt to compute `u32::MAX * 2_u32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:61:6
   |
LL | const VALS_U64: (u64,) =
   | ----------------------
LL |     (
LL |      u64::MAX * 2,
   |      ^^^^^^^^^^^^ attempt to compute `u64::MAX * 2_u64`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to 8 previous errors

Future incompatibility report: Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:14:6
   |
LL | const VALS_I8: (i8,) =
   | --------------------
LL |     (
LL |      i8::MIN * 2,
   |      ^^^^^^^^^^^ attempt to compute `i8::MIN * 2_i8`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:21:6
   |
LL | const VALS_I16: (i16,) =
   | ----------------------
LL |     (
LL |      i16::MIN * 2,
   |      ^^^^^^^^^^^^ attempt to compute `i16::MIN * 2_i16`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:28:6
   |
LL | const VALS_I32: (i32,) =
   | ----------------------
LL |     (
LL |      i32::MIN * 2,
   |      ^^^^^^^^^^^^ attempt to compute `i32::MIN * 2_i32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:35:6
   |
LL | const VALS_I64: (i64,) =
   | ----------------------
LL |     (
LL |      i64::MIN * 2,
   |      ^^^^^^^^^^^^ attempt to compute `i64::MIN * 2_i64`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:42:6
   |
LL | const VALS_U8: (u8,) =
   | --------------------
LL |     (
LL |      u8::MAX * 2,
   |      ^^^^^^^^^^^ attempt to compute `u8::MAX * 2_u8`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:48:6
   |
LL | const VALS_U16: (u16,) = (
   | ----------------------
LL |      u16::MAX * 2,
   |      ^^^^^^^^^^^^ attempt to compute `u16::MAX * 2_u16`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:54:6
   |
LL | const VALS_U32: (u32,) = (
   | ----------------------
LL |      u32::MAX * 2,
   |      ^^^^^^^^^^^^ attempt to compute `u32::MAX * 2_u32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2c.rs:61:6
   |
LL | const VALS_U64: (u64,) =
   | ----------------------
LL |     (
LL |      u64::MAX * 2,
   |      ^^^^^^^^^^^^ attempt to compute `u64::MAX * 2_u64`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2c.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

